Stats Work / Touch experimenting
- Added day-time-grid to stats
- adding some touch-manipulation to stop double tap from zooming
- Added progress to export using Toast
- Added perm option to toast

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf8" />
-		<title>Nomie Dap</title>
+		<title>Open Nomie</title>
 		<meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=contain" />
 
 		<meta name="apple-mobile-web-app-title" content="Nomie 4" />
@@ -11,7 +11,7 @@
 		<link rel="apple-touch-icon" href="/images/icon.png" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="default" />
 		<link rel="icon" type="image/png" href="/favicon.png" />
-		<link rel="icon" sizes="192x192" href="/images/icon.png" />
+		<link rel="icon" type="image/png" sizes="192x192" href="/images/icon.png" />
 		<link rel="manifest" href="/manifest.json" crossorigin="use-credentials" />
 		<!-- Browserstack for decentralied / encrypted storage -->
 		<script
