--- a/public/index.html
+++ b/public/index.html
@@ -9,10 +9,10 @@
 		<meta name="theme-color" content="#4d84a1" />
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<link rel="apple-touch-startup-image" href="/images/nomie-splash.png" />
-		<link rel="apple-touch-icon" href="/images/icon.png" />
+		<link rel="apple-touch-icon" href="/images/icons/nomie-512.png" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="default" />
 		<link rel="icon" type="image/png" href="/favicon.png" />
-		<link rel="icon" type="image/png" sizes="192x192" href="/images/icon.png" />
+		<link rel="icon" type="image/png" sizes="192x192" href="/images/icons/nomie-android-192.png" />
 		<link rel="manifest" href="/manifest.json" crossorigin="use-credentials" />
 
 		<!-- ZMDI for icons -->
