Map Display fixes
- Unifying anying lat/long within 0.4km to avoid a bunch of markers around your general location.
- Added distance module

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf8" />
 		<title>Nomie 4</title>
 		<meta name="viewport" content="width=device-width,initial-scale=1" />
-		<meta name="description" content="100% Private Mood and Life Tracking. Powered by Blockstack" />
+		<meta name="description" content="Open Source Mood and Life Tracking" />
 		<meta name="apple-mobile-web-app-title" content="Nomie 4" />
 		<meta name="theme-color" content="#4d84a1" />
 		<meta name="apple-mobile-web-app-capable" content="yes" />
