--- a/public/index.html
+++ b/public/index.html
@@ -3,23 +3,22 @@
 	<head>
 		<meta charset="utf8" />
 		<title>Nomie 4</title>
+
 		<meta name="viewport" content="width=device-width,initial-scale=1" />
 		<meta name="description" content="Open Source Mood and Life Tracking" />
 		<meta name="apple-mobile-web-app-title" content="Nomie 4" />
 		<meta name="theme-color" content="#4d84a1" />
 		<meta name="apple-mobile-web-app-capable" content="yes" />
+		<meta name="apple-mobile-web-app-status-bar-style" content="default" />
+
 		<link rel="apple-touch-startup-image" href="/images/nomie-splash.png" />
 		<link rel="apple-touch-icon" href="/images/icons/nomie-512.png" />
-		<meta name="apple-mobile-web-app-status-bar-style" content="default" />
 		<link rel="icon" type="image/png" href="/favicon.png" />
 		<link rel="icon" type="image/png" sizes="192x192" href="/images/icons/nomie-android-192.png" />
 		<link rel="manifest" href="/manifest.json" crossorigin="use-credentials" />
 
 		<!-- ZMDI for icons -->
-		<link
-			rel="stylesheet"
-			href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css"
-		/>
+		<link rel="stylesheet" href="vendors/material-design-iconic-font/css/material-design-iconic-font.min.css" />
 		<!-- main is from scss/main.scss -->
 		<link rel="stylesheet" href="/main.css?v=APP_VERSION" />
 		<!-- bundle is all the styles from the app and components-->
