--- a/public/index.html
+++ b/public/index.html
@@ -16,9 +16,10 @@
 		<link rel="icon" type="image/png" href="/favicon.png" />
 		<link rel="icon" type="image/png" sizes="192x192" href="/images/icons/nomie-android-192.png" />
 		<link rel="manifest" href="/manifest.json" crossorigin="use-credentials" />
+		<base href="/" />
 
 		<!-- ZMDI for icons -->
-		<link rel="stylesheet" href="vendors/material-design-iconic-font/css/material-design-iconic-font.min.css" />
+		<link rel="stylesheet" href="/vendors/material-design-iconic-font/css/material-design-iconic-font.min.css" />
 		<!-- main is from scss/main.scss -->
 		<link rel="stylesheet" href="/main.css?v=APP_VERSION" />
 		<!-- bundle is all the styles from the app and components-->
@@ -29,10 +30,10 @@
 		<noscript>
 			Sorry. Nomie 4 requires Javascript to run.
 		</noscript>
-		<script src="vendors/blockstack/blockstack.js"></script>
-		<script src="vendors/leaflet/leaflet.js"></script>
-		<script src="vendors/leaflet/esri-leaflet.js"></script>
-		<script src="vendors/leaflet/esri-leaflet-geocoder.js"></script>
+		<script src="/vendors/blockstack/blockstack.js"></script>
+		<script src="/vendors/leaflet/leaflet.js"></script>
+		<script src="/vendors/leaflet/esri-leaflet.js"></script>
+		<script src="/vendors/leaflet/esri-leaflet-geocoder.js"></script>
 
 		<script src="/bundle.js?v=APP_VERSION"></script>
 		<!-- Styles -->
