--- a/public/index.html
+++ b/public/index.html
@@ -31,34 +31,6 @@
 
 		<!-- main is from scss/main.scss -->
 		<link rel="stylesheet" href="/main.css?v=APP_VERSION" />
-		<style>
-			.loading-screen {
-				background-image: url('/images/nomie-splash.png');
-				background-size: cover;
-				background-position: center;
-				position: fixed;
-				top: 0;
-				bottom: 0;
-				left: 0;
-				right: 0;
-				z-index: 4000;
-			}
-			.version {
-				position: absolute;
-				width: 100px;
-				bottom: 100px;
-				font-size: 12px;
-				color: #fff;
-				margin-left: -50px;
-				left: 50%;
-				background-color: rgba(0, 0, 0, 0.3);
-				border-radius: 12px;
-				height: 24px;
-				line-height: 24px;
-				padding: 0 12px;
-				text-align: center;
-			}
-		</style>
 	</head>
 
 	<body>
@@ -67,6 +39,52 @@
 		</noscript>
 
 		<div class="loading-screen delete-on-app">
+			<svg width="120" viewBox="0 0 491 350" fill="none" xmlns="http://www.w3.org/2000/svg">
+				<g filter="url(#filter0_i)">
+					<path
+						d="M365.175 157.357C399.09 157.357 426.584 184.923 426.584 218.926C426.584 247.475 407.203 271.484 380.914 278.454C372.447 280.854 367.231 290.756 367.231 302.11C367.231 315.275 375.735 325.948 386.224 325.948C387.535 325.948 388.815 325.781 390.16 325.245C447.274 313.176 490.147 263.096 490.147 202.241C490.147 188.896 488.252 175.98 484.433 163.904C452.53 69.085 363.099 0.810547 257.765 0.810547C234.424 0.810547 211.863 4.1622 190.536 10.4111C190.318 10.2328 189.713 9.91307 189.041 9.55812C188.355 9.19596 187.6 8.79716 187.116 8.47461C177.138 -2.11235 49.3418 3.63469 42.0518 53.328C38.4657 61.3906 38.6093 70.4414 38.7614 80.0373C38.7838 81.4517 38.8064 82.878 38.8173 84.3147C38.9805 105.837 47.6079 124.429 47.6079 124.429C47.6079 124.429 47.2469 124.074 41.5094 135.92C25.0794 168.473 11.7966 214.039 11.7966 252.944C11.7966 258.777 12.0043 264.561 12.4121 270.29C7.2357 276.596 -6.3571 296.625 4.78419 322.127C4.78419 322.127 7.34065 325.905 7.45143 320.885C5.99141 307.551 9.1067 296.092 15.1322 293.124C18.0715 310.65 22.8945 327.535 29.3669 343.568C29.3669 345.606 39.9685 347.26 53.0466 347.26C66.1246 347.26 76.7262 345.606 76.7262 343.568C82.0633 315.799 105.382 294.62 134.638 294.62C163.657 294.62 187.868 315.257 193.237 343.163C193.237 346.629 211.265 349.441 233.501 349.441C255.74 349.441 273.765 346.629 274.04 343.054C267.728 326.677 264.267 308.877 264.267 290.269C264.267 274.934 266.618 260.152 270.976 246.261C271.035 245.909 271.095 245.557 271.156 245.207L270.136 247.895C270.516 246.612 270.924 245.34 271.358 244.08C284.83 170.561 347.297 159.894 347.297 159.894C353.128 158.257 359.048 157.357 365.175 157.357Z"
+						fill="white"
+					/>
+				</g>
+				<path
+					d="M381.191 315.579C385.2 315.247 387.982 309.175 387.407 302.017C386.832 294.858 383.117 289.326 379.109 289.657C375.099 289.991 372.316 296.063 372.891 303.221C373.466 310.379 377.183 315.912 381.191 315.579Z"
+					fill="black"
+					fill-opacity="0.1"
+				/>
+				<path
+					fill-rule="evenodd"
+					clip-rule="evenodd"
+					d="M47.2473 123.436C47.2473 123.436 81.4162 214.127 151.031 156.008C151.351 156.008 107.921 209.656 68.6428 177.403C68.8371 177.209 61.8196 171.34 54.4242 161.163C49.6653 154.614 44.75 146.281 41.4992 136.528L47.2473 123.436Z"
+					fill="black"
+					fill-opacity="0.06"
+				/>
+				<defs>
+					<filter
+						id="filter0_i"
+						x="0.514648"
+						y="0.810547"
+						width="489.632"
+						height="350.63"
+						filterUnits="userSpaceOnUse"
+						color-interpolation-filters="sRGB"
+					>
+						<feFlood flood-opacity="0" result="BackgroundImageFix" />
+						<feBlend mode="normal" in="SourceGraphic" in2="BackgroundImageFix" result="shape" />
+						<feColorMatrix
+							in="SourceAlpha"
+							type="matrix"
+							values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
+							result="hardAlpha"
+						/>
+						<feOffset dy="2" />
+						<feGaussianBlur stdDeviation="6.5" />
+						<feComposite in2="hardAlpha" operator="arithmetic" k2="-1" k3="1" />
+						<feColorMatrix type="matrix" values="0 0 0 0 1 0 0 0 0 1 0 0 0 0 1 0 0 0 0.206805 0" />
+						<feBlend mode="normal" in2="shape" result="effect1_innerShadow" />
+					</filter>
+				</defs>
+			</svg>
+
 			<div class="version">vAPP_VERSION</div>
 		</div>
 		<!-- End Fakes-->
