--- a/public/index.html
+++ b/public/index.html
@@ -8,11 +8,11 @@
 			name="viewport"
 			content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, viewport-fit=cover"
 		/>
-		<meta name="description" content="Open Source Mood and Life Tracking" />
+		<meta name="description" content="Open Source Mood Tracking" />
 		<meta name="apple-mobile-web-app-title" content="Nomie 4" />
 		<meta name="theme-color" content="#319ed7" />
 		<meta name="apple-mobile-web-app-capable" content="yes" />
-		<meta name="apple-mobile-web-app-status-bar-style" content="default" />
+		<meta name="apple-mobile-web-app-status-bar-style" content="black" />
 		<meta name="full-screen" content="yes" />
 
 		<link rel="apple-touch-icon" href="/images/icons/nomie-512.png" />
@@ -24,7 +24,7 @@
 		<meta name="twitter:site" content="@nomieapp" />
 		<meta name="twitter:creator" content="@brandoncorbin" />
 		<meta name="twitter:title" content="Nomie.app" />
-		<meta name="twitter:description" content="Mood and Life Tracking" />
+		<meta name="twitter:description" content="Mood Tracking" />
 		<meta name="twitter:app:country" content="us" />
 
 		<base href="/" />
