--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,18 @@
 		<link rel="apple-touch-icon" href="/images/icons/nomie-512.png" />
 		<link rel="icon" type="image/png" href="/favicon.png" />
 		<link rel="icon" type="image/png" sizes="192x192" href="/images/icons/nomie-android-192.png" />
+		<link
+			rel="apple-touch-startup-image"
+			media="screen and (device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)"
+			href="/images/splash-screen.svg"
+		/>
 		<link rel="manifest" href="/manifest.json" />
+
+		<meta property="og:type" content="website" />
+		<meta property="og:url" content="https://open.nomie.app/" />
+		<meta property="og:title" content="Nomie 4" />
+		<meta property="og:description" content="Private Mood and Life Tracking" />
+		<meta property="og:image" content="" />
 
 		<meta name="twitter:card" content="app" />
 		<meta name="twitter:site" content="@nomieapp" />
