--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <meta name="apple-mobile-web-app-title" content="Nomie 4" />
     <meta name="theme-color" content="#319ed7" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <meta name="full-screen" content="yes" />
 
     <link rel="apple-touch-icon" href="/images/icons/nomie-512.png" />
