--- a/public/index.html
+++ b/public/index.html
@@ -73,7 +73,8 @@
     <!-- bundle is all the styles from the app and components-->
     <link rel="stylesheet" href="/bundle.css?v=APP_VERSION" />
     <!-- Simple Analytics - privacy first analytics -->
-    <!-- <script async defer src="https://cdn.simpleanalytics.io/hello.js"></script>
+    <script async defer src="https://cdn.simpleanalytics.io/hello.js"></script>
+    <!--   
     <noscript
       ><img src="https://api.simpleanalytics.io/hello.gif" alt=""
     /></noscript> -->
