Working on service workers

--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
     <base href="/" />
 
     <!-- main is from scss/main.scss -->
-    <link rel="stylesheet" href="/main.css?v=APP_VERSION" />
+    <link rel="stylesheet" href="/main.css?v=4.6.20" />
   </head>
 
   <body>
@@ -50,7 +50,7 @@
     </noscript>
 
     <div class="loading-screen delete-on-app">
-      <div class="version">vAPP_VERSION</div>
+      <div class="version">v4.6.20</div>
     </div>
 
     <!-- Javascript Includes -->
@@ -61,7 +61,7 @@
     <script src="/vendors/leaflet/geocoder/esri-leaflet-geocoder.js"></script>
 
     <!-- App Bundle -->
-    <script src="/bundle.js?v=APP_VERSION"></script>
+    <script src="/bundle.js?v=4.6.20"></script>
 
     <!-- Stylesheets -->
     <link rel="stylesheet" href="vendors/leaflet/leaflet.css" />
@@ -75,6 +75,6 @@
       href="/vendors/material-design-iconic-font/css/material-design-iconic-font.min.css"
     />
     <!-- bundle is all the styles from the app and components-->
-    <link rel="stylesheet" href="/bundle.css?v=APP_VERSION" />
+    <link rel="stylesheet" href="/bundle.css?v=4.6.20" />
   </body>
 </html>
