--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,8 @@
     <meta charset="utf8" />
     <title>Nomie 4</title>
 
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, viewport-fit=cover"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, viewport-fit=cover" />
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
     <meta name="description" content="Open Source Mood Tracking" />
     <meta name="apple-mobile-web-app-title" content="Nomie 4" />
     <meta name="theme-color" content="#319ed7" />
@@ -17,12 +15,7 @@
 
     <link rel="apple-touch-icon" href="/images/icons/nomie-512.png" />
     <link rel="icon" type="image/png" href="/favicon.png" />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="192x192"
-      href="/images/icons/nomie-android-192.png"
-    />
+    <link rel="icon" type="image/png" sizes="192x192" href="/images/icons/nomie-android-192.png" />
     <link rel="manifest" href="/manifest.json" />
 
     <meta property="og:type" content="website" />
@@ -65,15 +58,9 @@
 
     <!-- Stylesheets -->
     <link rel="stylesheet" href="vendors/leaflet/leaflet.css" />
-    <link
-      rel="stylesheet"
-      href="vendors/leaflet/geocoder/esri-leaflet-geocoder.css"
-    />
+    <link rel="stylesheet" href="vendors/leaflet/geocoder/esri-leaflet-geocoder.css" />
     <!-- ZMDI for icons -->
-    <link
-      rel="stylesheet"
-      href="/vendors/material-design-iconic-font/css/material-design-iconic-font.min.css"
-    />
+    <link rel="stylesheet" href="/vendors/material-design-iconic-font/css/material-design-iconic-font.min.css" />
     <!-- bundle is all the styles from the app and components-->
     <link rel="stylesheet" href="/bundle.css?v=4.6.20" />
   </body>
