Cache-control work

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <title>Nomie 4</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, viewport-fit=cover" />
-    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+    <meta http-equiv="Cache-Control" content="max-age=600" />
     <meta name="description" content="Open Source Mood Tracking" />
     <meta name="apple-mobile-web-app-title" content="Nomie 4" />
     <meta name="theme-color" content="#319ed7" />
