Updating cache-busting

--- a/public/index.template.html
+++ b/public/index.template.html
@@ -34,7 +34,7 @@
     <base href="/" />
 
     <!-- main is from scss/main.scss -->
-    <link rel="stylesheet" href="/main.css?v=4.7.3" />
+    <link rel="stylesheet" href="/main.css?v=APP_VERSION" />
   </head>
 
   <body>
@@ -43,7 +43,7 @@
     </noscript>
 
     <div class="loading-screen delete-on-app">
-      <div class="version">v4.7.3</div>
+      <div class="version">vAPP_VERSION</div>
     </div>
 
     <!-- Javascript Includes -->
@@ -54,7 +54,7 @@
     <script src="/vendors/leaflet/geocoder/esri-leaflet-geocoder.js"></script>
 
     <!-- App Bundle -->
-    <script src="/bundle.js?v=4.7.3"></script>
+    <script src="/bundle.js?v=APP_VERSION"></script>
 
     <!-- Stylesheets -->
     <link rel="stylesheet" href="vendors/leaflet/leaflet.css" />
@@ -62,6 +62,6 @@
     <!-- ZMDI for icons -->
     <link rel="stylesheet" href="/vendors/material-design-iconic-font/css/material-design-iconic-font.min.css" />
     <!-- bundle is all the styles from the app and components-->
-    <link rel="stylesheet" href="/bundle.css?v=4.7.3" />
+    <link rel="stylesheet" href="/bundle.css?v=APP_VERSION" />
   </body>
 </html>
