--- a/public/index.template.html
+++ b/public/index.template.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf8" />
-    <title>Nomie 4</title>
+    <title>Nomie 5</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, viewport-fit=cover" />
     <meta http-equiv="Cache-Control" content="max-age=600" />
     <meta name="description" content="Open Source Mood Tracking" />
-    <meta name="apple-mobile-web-app-title" content="Nomie 4" />
+    <meta name="apple-mobile-web-app-title" content="Nomie 5" />
     <meta name="theme-color" content="#319ed7" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
@@ -20,7 +20,7 @@
 
     <meta property="og:type" content="website" />
     <meta property="og:url" content="APP_URL" />
-    <meta property="og:title" content="Nomie 4" />
+    <meta property="og:title" content="Nomie 5" />
     <meta property="og:description" content="Private Mood and Life Tracking" />
     <meta property="og:image" content="" />
 
@@ -39,7 +39,7 @@
 
   <body>
     <noscript>
-      Sorry. Nomie 4 requires Javascript to run.
+      Sorry. Nomie requires Javascript to run.
     </noscript>
 
     <div class="loading-screen delete-on-app">
@@ -47,21 +47,15 @@
     </div>
 
     <!-- Javascript Includes -->
-    <script src="/vendors/pouchdb/pouchdb.min.js"></script>
+    <!-- <script src="/vendors/pouchdb/pouchdb.min.js"></script>
     <script src="/vendors/blockstack/blockstack.js"></script>
     <script src="/vendors/leaflet/leaflet.js"></script>
     <script src="/vendors/leaflet/esri/esri-leaflet.js"></script>
-    <script src="/vendors/leaflet/geocoder/esri-leaflet-geocoder.js"></script>
+    <script src="/vendors/leaflet/geocoder/esri-leaflet-geocoder.js"></script> -->
 
-    <!-- App Bundle -->
+    <script src="/js/vendors.js"></script>
     <script src="/bundle.js?v=APP_VERSION"></script>
-
-    <!-- Stylesheets -->
-    <link rel="stylesheet" href="vendors/leaflet/leaflet.css" />
-    <link rel="stylesheet" href="vendors/leaflet/geocoder/esri-leaflet-geocoder.css" />
-    <!-- ZMDI for icons -->
-    <link rel="stylesheet" href="/vendors/material-design-iconic-font/css/material-design-iconic-font.min.css" />
-    <!-- bundle is all the styles from the app and components-->
+    <link rel="stylesheet" href="/css/vendors.css" defer />
     <link rel="stylesheet" href="/bundle.css?v=APP_VERSION" />
   </body>
 </html>
