enhance: Icon Update

--- a/public/index.template.html
+++ b/public/index.template.html
@@ -15,7 +15,7 @@
 
     <link rel="apple-touch-icon" href="/images/icons/nomie-512.png" />
     <link rel="icon" type="image/png" href="/favicon.png" />
-    <link rel="icon" type="image/png" sizes="192x192" href="/images/icons/nomie-android-192.png" />
+    <link rel="icon" type="image/png" sizes="192x192" href="/images/icons/nomie-192.png" />
     <link rel="manifest" href="/manifest.json" />
 
     <meta property="og:type" content="website" />
