--- a/public/index.template.html
+++ b/public/index.template.html
@@ -55,7 +55,7 @@
 
     <script src="/js/vendors.js"></script>
     <script src="/bundle.js?v=APP_VERSION"></script>
-    <link rel="stylesheet" href="/css/vendors.css" defer />
+    <link rel="stylesheet" href="/css/vendors.css?v=APP_VERSION" defer />
     <link rel="stylesheet" href="/bundle.css?v=APP_VERSION" />
   </body>
 </html>
