--- a/public/index.template.html
+++ b/public/index.template.html
@@ -46,16 +46,16 @@
       <div class="version">vAPP_VERSION</div>
     </div>
 
-    <!-- Javascript Includes -->
-    <!-- <script src="/vendors/pouchdb/pouchdb.min.js"></script>
-    <script src="/vendors/blockstack/blockstack.js"></script>
-    <script src="/vendors/leaflet/leaflet.js"></script>
-    <script src="/vendors/leaflet/esri/esri-leaflet.js"></script>
-    <script src="/vendors/leaflet/geocoder/esri-leaflet-geocoder.js"></script> -->
-
     <script src="/js/vendors.js"></script>
     <script src="/bundle.js?v=APP_VERSION"></script>
     <link rel="stylesheet" href="/css/vendors.css?v=APP_VERSION" defer />
     <link rel="stylesheet" href="/bundle.css?v=APP_VERSION" />
+    <!-- 
+      SimpleAnalytics 
+      Privacy aware analytics. They don't track IP or use Cookies.
+      Learn more at https://docs.simpleanalytics.com/what-we-collect
+    -->
+    <script async defer src="https://cdn.simpleanalytics.io/hello.js"></script>
+    <noscript><img src="https://api.simpleanalytics.io/hello.gif" alt="" /></noscript>
   </body>
 </html>
