enhance: Adding Nomie 5 upgrade infromation

--- a/public/index.template.html
+++ b/public/index.template.html
@@ -63,5 +63,7 @@
     <link rel="stylesheet" href="/vendors/material-design-iconic-font/css/material-design-iconic-font.min.css" />
     <!-- bundle is all the styles from the app and components-->
     <link rel="stylesheet" href="/bundle.css?v=APP_VERSION" />
+    <script async defer src="https://cdn.simpleanalytics.io/hello.js"></script>
+    <noscript><img src="https://api.simpleanalytics.io/hello.gif" alt="" /></noscript>
   </body>
 </html>
