--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
 
     <link rel="apple-touch-icon" href="/images/icons/nomie-512.png" />
     <link rel="icon" type="image/png" href="/favicon.png" />
-    <link rel="icon" type="image/png" sizes="192x192" href="/images/icons/nomie-android-192.png" />
+    <link rel="icon" type="image/png" sizes="192x192" href="/images/icons/nomie-192.png" />
     <link rel="manifest" href="/manifest.json" />
 
     <meta property="og:type" content="website" />
@@ -34,7 +34,7 @@
     <base href="/" />
 
     <!-- main is from scss/main.scss -->
-    <link rel="stylesheet" href="/main.css?v=APP_VERSION" />
+    <link rel="stylesheet" href="/main.css?v=5.1.39" />
   </head>
 
   <body>
@@ -43,12 +43,19 @@
     </noscript>
 
     <div class="loading-screen delete-on-app">
-      <div class="version">vAPP_VERSION</div>
+      <div class="version">v5.1.39</div>
     </div>
 
     <script src="/js/vendors.js"></script>
-    <script src="/bundle.js?v=APP_VERSION"></script>
-    <link rel="stylesheet" href="/css/vendors.css" defer />
-    <link rel="stylesheet" href="/bundle.css?v=APP_VERSION" />
+    <script src="/bundle.js?v=5.1.39"></script>
+    <link rel="stylesheet" href="/css/vendors.css?v=5.1.39" defer />
+    <link rel="stylesheet" href="/bundle.css?v=5.1.39" />
+    <!-- 
+      SimpleAnalytics 
+      Privacy aware analytics. They don't track IP or use Cookies.
+      Learn more at https://docs.simpleanalytics.com/what-we-collect
+    -->
+    <script async defer src="https://cdn.simpleanalytics.io/hello.js"></script>
+    <noscript><img src="https://api.simpleanalytics.io/hello.gif" alt="" /></noscript>
   </body>
 </html>
