chore: updating title

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf8" />
-    <title>Nomie 5</title>
+    <title>Nomie 5 | Life Tracking Web App</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, viewport-fit=cover" />
     <meta http-equiv="Cache-Control" content="max-age=600" />
@@ -39,7 +39,8 @@
 
   <body>
     <noscript>
-      Sorry. Nomie requires Javascript to run.
+      Nomie is an open source, and completely private life tracking tool. Track the good, the bad, your friends, your whatever. Completely,
+      privately. Sorry. Nomie requires Javascript to run.
     </noscript>
 
     <div class="loading-screen delete-on-app">
