--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf8" />
-    <title>Nomie 5 | Life Tracking Web App</title>
+    <title>Nomie 5</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, viewport-fit=cover" />
     <meta http-equiv="Cache-Control" content="max-age=600" />
@@ -34,23 +34,22 @@
     <base href="/" />
 
     <!-- main is from scss/main.scss -->
-    <link rel="stylesheet" href="/main.css?v=5.1.39" />
+    <link rel="stylesheet" href="/main.css?v=5.1.62" />
   </head>
 
   <body>
     <noscript>
-      Nomie is an open source, and completely private life tracking tool. Track the good, the bad, your friends, your whatever. Completely,
-      privately. Sorry. Nomie requires Javascript to run.
+      Sorry. Nomie requires Javascript to run.
     </noscript>
 
     <div class="loading-screen delete-on-app">
-      <div class="version">v5.1.39</div>
+      <div class="version">v5.1.62</div>
     </div>
 
     <script src="/js/vendors.js"></script>
-    <script src="/bundle.js?v=5.1.39"></script>
-    <link rel="stylesheet" href="/css/vendors.css?v=5.1.39" defer />
-    <link rel="stylesheet" href="/bundle.css?v=5.1.39" />
+    <script src="/bundle.js?v=5.1.62"></script>
+    <link rel="stylesheet" href="/css/vendors.css?v=5.1.62" defer />
+    <link rel="stylesheet" href="/bundle.css?v=5.1.62" />
     <!-- 
       SimpleAnalytics 
       Privacy aware analytics. They don't track IP or use Cookies.
