--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
     <link rel="stylesheet" href="/main.css?v=5.2.4" />
   </head>
 
-  <body class="test">
+  <body class="">
     <noscript>
       Sorry. Nomie requires Javascript to run.
     </noscript>
