--- a/public/index.template.html
+++ b/public/index.template.html
@@ -54,11 +54,11 @@
       Purch
       For in-app purchases
     -->
-    <script async defer src="https://purch.dev/v1/purch.js"></script>
-    <script async defer>
+    <script src="https://purch.dev/v1/purch.js"></script>
+    <script>
       $purch.init({
         appId: "nomie",
-        key: "live_PG5CF13F1F994161B7A2AC38455A",
+        key: "APP_PURCH_KEY",
       });
     </script>
     <!-- 
