--- a/public/index.template.html
+++ b/public/index.template.html
@@ -54,12 +54,20 @@
       Purch
       For in-app purchases
     -->
-    <script src="https://purch.dev/v1/purch.js"></script>
     <script>
-      $purch.init({
-        appId: "nomie",
-        key: "APP_PURCH_KEY",
-      });
+      ((w, d) => {
+        window["$purch"] = undefined;
+        var s = document.createElement("script");
+        s.src = "https://purch.dev/v1/purch.js";
+        s.async = 1;
+        d.head.appendChild(s);
+        s.onload = () => {
+          $purch.init({
+            appId: "nomie",
+            key: "APP_PURCH_KEY",
+          });
+        };
+      })(window, document);
     </script>
     <!-- 
       SimpleAnalytics 
