feat: adding patreon to settings page

--- a/public/index.template.html
+++ b/public/index.template.html
@@ -54,7 +54,7 @@
       Purch
       For in-app purchases
     -->
-    <script>
+    <!-- <script>
       ((w, d) => {
         window["$purch"] = undefined;
         var s = document.createElement("script");
@@ -68,7 +68,7 @@
           });
         };
       })(window, document);
-    </script>
+    </script> -->
     <!-- 
       SimpleAnalytics 
       Privacy aware analytics. They don't track IP or use Cookies.
