--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
     <base href="/" />
 
     <!-- main is from scss/main.scss -->
-    <link rel="stylesheet" href="/main.css?v=5.2.14" />
+    <link rel="stylesheet" href="/main.css?v=5.2.16" />
   </head>
 
   <body>
@@ -43,18 +43,18 @@
     </noscript>
 
     <div class="loading-screen delete-on-app">
-      <div class="version">v5.2.14</div>
+      <div class="version">v5.2.16</div>
     </div>
 
     <script src="/js/vendors.js"></script>
-    <script src="/bundle.js?v=5.2.14"></script>
-    <link rel="stylesheet" href="/css/vendors.css?v=5.2.14" defer />
-    <link rel="stylesheet" href="/bundle.css?v=5.2.14" />
+    <script src="/bundle.js?v=5.2.16"></script>
+    <link rel="stylesheet" href="/css/vendors.css?v=5.2.16" defer />
+    <link rel="stylesheet" href="/bundle.css?v=5.2.16" />
     <!-- 
       Purch
       For in-app purchases
     -->
-    <script>
+    <!-- <script>
       ((w, d) => {
         window["$purch"] = undefined;
         var s = document.createElement("script");
@@ -68,7 +68,7 @@
           });
         };
       })(window, document);
-    </script>
+    </script> -->
     <!-- 
       SimpleAnalytics 
       Privacy aware analytics. They don't track IP or use Cookies.
