--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
     <base href="/" />
 
     <!-- main is from scss/main.scss -->
-    <link rel="stylesheet" href="/main.css?v=5.4.4" />
+    <link rel="stylesheet" href="/main.css?v=5.5.0-0" />
   </head>
 
   <body>
@@ -43,13 +43,13 @@
     </noscript>
 
     <div class="loading-screen delete-on-app">
-      <div class="version">v5.4.4</div>
+      <div class="version">v5.5.0-0</div>
     </div>
 
     <script src="/js/vendors.js"></script>
-    <script src="/bundle.js?v=5.4.4"></script>
-    <link rel="stylesheet" href="/css/vendors.css?v=5.4.4" defer />
-    <link rel="stylesheet" href="/bundle.css?v=5.4.4" />
+    <script src="/bundle.js?v=5.5.0-0"></script>
+    <link rel="stylesheet" href="/css/vendors.css?v=5.5.0-0" defer />
+    <link rel="stylesheet" href="/bundle.css?v=5.5.0-0" />
     <!-- 
       Purch
       For in-app purchases
