--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
     <base href="/" />
 
     <!-- main is from scss/main.scss -->
-    <link rel="stylesheet" href="/main.css?v=5.5.0-5" />
+    <link rel="stylesheet" href="/main.css?v=5.5.0-6" />
   </head>
 
   <body>
@@ -43,13 +43,32 @@
     </noscript>
 
     <div class="loading-screen delete-on-app">
-      <div class="version">v5.5.0-5</div>
+      <div class="version">v5.5.0-6</div>
     </div>
 
     <script src="/js/vendors.js"></script>
-    <script src="/bundle.js?v=5.5.0-5"></script>
-    <link rel="stylesheet" href="/css/vendors.css?v=5.5.0-5" defer />
-    <link rel="stylesheet" href="/bundle.css?v=5.5.0-5" />
+    <script src="/bundle.js?v=5.5.0-6"></script>
+    <link rel="stylesheet" href="/css/vendors.css?v=5.5.0-6" defer />
+    <link rel="stylesheet" href="/bundle.css?v=5.5.0-6" />
+    <!-- 
+      Purch
+      For in-app purchases
+    -->
+    <!-- <script>
+      ((w, d) => {
+        window["$purch"] = undefined;
+        var s = document.createElement("script");
+        s.src = "https://purch.dev/v1/purch.js";
+        s.async = 1;
+        d.head.appendChild(s);
+        s.onload = () => {
+          $purch.init({
+            appId: "nomie",
+            key: "test_PG262565617C4BC8AA788D972329",
+          });
+        };
+      })(window, document);
+    </script> -->
     <!-- 
       SimpleAnalytics 
       Privacy aware analytics. They don't track IP or use Cookies.
