chore: prepare for production rollout

--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
     <base href="/" />
 
     <!-- main is from scss/main.scss -->
-    <link rel="stylesheet" href="/main.css?v=5.6.0" />
+    <link rel="stylesheet" href="/main.css?v=5.6.1-0" />
   </head>
 
   <body>
@@ -43,32 +43,13 @@
     </noscript>
 
     <div class="loading-screen delete-on-app">
-      <div class="version">v5.6.0</div>
+      <div class="version">v5.6.1-0</div>
     </div>
 
     <script src="/js/vendors.js"></script>
-    <script src="/bundle.js?v=5.6.0"></script>
-    <link rel="stylesheet" href="/css/vendors.css?v=5.6.0" defer />
-    <link rel="stylesheet" href="/bundle.css?v=5.6.0" />
-    <!-- 
-      Purch
-      For in-app purchases
-    -->
-    <!-- <script>
-      ((w, d) => {
-        window["$purch"] = undefined;
-        var s = document.createElement("script");
-        s.src = "https://purch.dev/v1/purch.js";
-        s.async = 1;
-        d.head.appendChild(s);
-        s.onload = () => {
-          $purch.init({
-            appId: "nomie",
-            key: "live_PG5CF13F1F994161B7A2AC38455A",
-          });
-        };
-      })(window, document);
-    </script> -->
+    <script src="/bundle.js?v=5.6.1-0"></script>
+    <link rel="stylesheet" href="/css/vendors.css?v=5.6.1-0" defer />
+    <link rel="stylesheet" href="/bundle.css?v=5.6.1-0" />
     <!-- 
       SimpleAnalytics 
       Privacy aware analytics. They don't track IP or use Cookies.
