--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
     <base href="/" />
 
     <!-- main is from scss/main.scss -->
-    <link rel="stylesheet" href="/main.css?v=5.6.3-3" />
+    <link rel="stylesheet" href="/main.css?v=5.6.3" />
   </head>
 
   <body>
@@ -43,13 +43,13 @@
     </noscript>
 
     <div class="loading-screen delete-on-app">
-      <div class="version">v5.6.3-3</div>
+      <div class="version">v5.6.3</div>
     </div>
 
     <script src="/js/vendors.js"></script>
-    <script src="/bundle.js?v=5.6.3-3"></script>
-    <link rel="stylesheet" href="/css/vendors.css?v=5.6.3-3" defer />
-    <link rel="stylesheet" href="/bundle.css?v=5.6.3-3" />
+    <script src="/bundle.js?v=5.6.3"></script>
+    <link rel="stylesheet" href="/css/vendors.css?v=5.6.3" defer />
+    <link rel="stylesheet" href="/bundle.css?v=5.6.3" />
     <!-- 
       SimpleAnalytics 
       Privacy aware analytics. They don't track IP or use Cookies.
