--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Svelte + Vite App</title>
+    <link rel="stylesheet" href="/css/vendors.css?v=APP_VERSION" defer />
+    <title>Nomie 5.7</title>
+    <script>window.global = window</script>
   </head>
   <body>
     <div id="app"></div>
+    <script src="/js/vendors.js"></script>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
