refactor: typescript, tailwind, icons

--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
     <div id="app"></div>
     <script src="/js/vendors.js"></script>
     <script type="module" src="/src/main.ts"></script>
+    <script async defer src="https://cdn.simpleanalytics.io/hello.js"></script>
+    <noscript><img src="https://api.simpleanalytics.io/hello.gif" alt="" /></noscript>
   </body>
 </html>
