--- a/index.html
+++ b/index.html
@@ -6,13 +6,133 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/vendors.css?v=APP_VERSION" defer />
     <title>Nomie 5.7</title>
-    <script>window.global = window</script>
+    <script>
+      window.global = window
+    </script>
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, viewport-fit=cover"
+      />
+    <meta http-equiv="Cache-Control" content="max-age=600" />
+    <meta name="description" content="Open Source Mood Tracking" />
+    <meta name="apple-mobile-web-app-title" content="Nomie 5" />
+    <meta name="theme-color" content="#319ed7" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <meta name="full-screen" content="yes" />
+
+    <link rel="apple-touch-icon" href="/images/icons/nomie-512.png" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="192x192"
+      href="/images/icons/nomie-192.png"
+      />
+    <link rel="manifest" href="/manifest.json" />
+
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="undefined" />
+    <meta property="og:title" content="Nomie 5" />
+    <meta property="og:description" content="Private Mood and Life Tracking" />
+    <meta property="og:image" content="" />
+
+    <meta name="twitter:card" content="app" />
+    <meta name="twitter:site" content="@nomieapp" />
+    <meta name="twitter:creator" content="@nomieapp" />
+    <meta name="twitter:title" content="Nomie.app" />
+    <meta name="twitter:description" content="Mood Tracking" />
+    <meta name="twitter:app:country" content="us" />
+
+    <style lang="text/css">
+        .loading-screen {
+          font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        position: fixed;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        z-index: 4000;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+      .loading-screen.deleted {
+        pointer-events: none;
+        transform: translateY(600px);
+      }
+      .loading-screen:before {
+        transition: all 0.5s ease-in-out;
+        content: "";
+        background-color: #fff;
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        z-index: 300;
+      }
+      .loading-screen:after {
+        transition: all 0.5s ease-in-out;
+        content: "";
+        background-image: url(/images/nomie-splash.svg);
+        background-size: cover;
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        z-index: 400;
+        background-position: center;
+      }
+      .version {
+        position: absolute;
+        width: 100px;
+        bottom: 50px;
+        font-size: 12px;
+        color: rgba(255, 255, 255, 0.5);
+        margin-left: -50px;
+        left: 50%;
+        background-color: rgba(0, 0, 0, 0.1);
+        border-radius: 12px;
+        height: 24px;
+        line-height: 24px;
+        padding: 0 12px;
+        text-align: center;
+      }
+      .delete-on-app {
+        transition: all 2s ease-in-out;
+        
+      }
+      .delete-on-app .version {
+        background-color: rgba(255, 255, 255, 0.5);
+        color: var(--color-primary);
+        font-weight: bold;
+        z-index: 3000;
+      }
+      .delete-on-app.deleted {
+        transition: all 0.5s ease-in-out;
+        opacity: 0;
+        transform: scale(1.7);
+      }
+      .delete-on-app.deleted .version {
+        bottom: 1000px;
+        opacity: 0;
+      }
+    </style>
   </head>
   <body>
-    <div id="app"></div>
-    <script src="/js/vendors.js"></script>
+    <div class="loading-screen delete-on-app">
+      <div class="version" style="">Loading...</div>
+    </div>
+    <div id="app" class="bg-primary-500"></div>
+    <script defer src="/js/vendors.js"></script>
     <script type="module" src="/src/main.ts"></script>
+
+    <!-- Simple Analytics-->
     <script async defer src="https://cdn.simpleanalytics.io/hello.js"></script>
-    <noscript><img src="https://api.simpleanalytics.io/hello.gif" alt="" /></noscript>
+    <noscript>
+      <img src="https://api.simpleanalytics.io/hello.gif" alt="" />
+    </noscript>
   </body>
 </html>
