chore: working on dynamic imports

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       sizes="192x192"
       href="/images/icons/nomie-192.png"
       />
-    <link rel="manifest" href="/manifest.json" />
+
 
     <meta property="og:type" content="website" />
     <meta property="og:url" content="undefined" />
@@ -126,7 +126,7 @@
       <div class="version" style="">Loading...</div>
     </div>
     <div id="app" class="bg-primary-500"></div>
-    <script defer src="/js/vendors.js"></script>
+    <script src="/js/vendors.js"></script>
     <script type="module" src="/src/main.ts"></script>
 
     <!-- Simple Analytics-->
