--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta http-equiv="Cache-Control" content="max-age=600" />
     <meta name="description" content="Open Source Mood Tracking" />
     <meta name="apple-mobile-web-app-title" content="Nomie 5" />
-    <meta name="theme-color" content="#319ed7" />
+    <meta name="theme-color" content="#000000" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <meta name="full-screen" content="yes" />
