--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/vendors.css?v=APP_VERSION" defer />
-    <title>Nomie 5.7</title>
+    <title>Nomie 6 Alpha</title>
     <script>
       window.global = window
     </script>
